# device-history

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  svelte.config.js
src/: App.svelte  app.css  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  cli.rs  lib.rs  logging.rs  main.rs  monitor.rs  state.rs  storage.rs  types.rs
src-tauri/src/commands/: events.rs  mod.rs  nicknames.rs  prefs.rs  snapshot.rs  system.rs
src/components/: Footer.svelte  Header.svelte  Notification.svelte  TabBar.svelte
src/components/known/: KnownDeviceCard.svelte  KnownDevicesTab.svelte  SearchBar.svelte  SortControls.svelte
src/components/monitor/: AboutBanner.svelte  ConnectedDeviceCard.svelte  ConnectedDevices.svelte  EventCard.svelte  EventLog.svelte  MonitorTab.svelte
src/components/shared/: CapacityBar.svelte  ClassFilter.svelte  DetailPanel.svelte
src/lib/: themes.ts  types.ts  utils.ts
src/lib/commands/: index.ts
src/lib/stores/: app.svelte.ts
