[package]
name = "device-history"
version = "0.6.0"
edition = "2021"
description = "WTF just disconnected? USB device monitor with GUI and CLI"

[dependencies]
wmi = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2"
iced = { version = "0.13", features = ["image", "tokio"] }
tokio = { version = "1", features = ["rt"] }
ureq = "2"
open = "5"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"
